@@ -171,6 +171,18 @@ double cbrt(double x);
 double expm1(double x);
 #endif // HAVE_EXPM1
 
+
+#ifndef HAVE_ERFC
+//! Complementary error function
+double erfc(double x);
+#endif
+
+#ifndef HAVE_ERF
+//! Error function
+inline double erf(double x) { return (1.0 - ::erfc(x)); }
+#endif
+
+
 // Represent GCC version in a concise form
 #define GCC_VERSION (__GNUC__ * 10000           \
                      + __GNUC_MINOR__ * 100     \
