@@ -1,6 +1,14 @@
 2008-04-09  Adam Piatyszek  <ediap@users.sourceforge.net>
 
 	* itpp/base/itcompat.cpp, itpp/base/itcompat.h,
+	itpp/base/math/error.cpp, itpp/base/math/error.h: Move erf(double)
+	and erfc(double) error functions to itcompat.{cpp,h}
+
+	These functions are conditionally defined on platforms, which do
+	not provide their own implementations. Therefore the best place
+	for them is in itcompat.{cpp,h} files.
+
+	* itpp/base/itcompat.cpp, itpp/base/itcompat.h,
 	itpp/base/math/elem_math.cpp, itpp/base/math/elem_math.h: Move
 	tgamma(), lgamma() and cbrt() definitions to itcompat.{cpp,h}
 
